--- a/src/components/commentCard/_comment-card.sass
+++ b/src/components/commentCard/_comment-card.sass
@@ -19,7 +19,8 @@
       transition: color .25s $ease
       position: relative
       cursor: pointer
-      padding: 0
+      padding: 15px 10px
+      margin: -8px 0
       font-weight: 700
       font-size: 3px
       letter-spacing: 1px
@@ -40,8 +41,8 @@
           visibility: visible
           text-align: left
     .dropdown
-      right: -18px
-      top: 12px
+      right: -8px
+      top: 25px
 
   &__title
     margin: 0 7px 0 0
