--- a/src/pug/project-questions.pug
+++ b/src/pug/project-questions.pug
@@ -45,8 +45,9 @@ block content
                 a.js-open-parent(href="#") Нужны ли вам услуги программирования?
             .__content
               .__progress
-                .__point(style="padding-left: 24%") 24%
-                  span
+                .__point(style="padding-left: 24%")
+                  span.dot
+                    span.info 24%
                 .__line
               .__item
                 p.__title Требуется ли вам интернет-маркетинг?
