--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -166,6 +166,11 @@ textarea.ui-input
           border: 1px solid $colorPrimary
           &::before
             background-color: $colorPrimary
+    &:hover
+      label
+        background: #fff
+        border-color: $borderColor
+
 
 .ui-checkbox
   label
