--- a/src/components/tile/_tile.sass
+++ b/src/components/tile/_tile.sass
@@ -3,12 +3,17 @@
   display: flex
   flex-direction: column
   position: relative
+  // position: static
   z-index: 1
   padding: 21px 20px 21px
   height: 100%
   border: 1px solid $borderColor
   border-radius: 4px
   transition: .25s $ease
+  *[contenteditable=true]
+    cursor: text
+    &:empty:before
+      color: $colorLight
   &:hover
     background-color: $colorBg
     border-color: $colorBg
@@ -79,7 +84,7 @@
       &:empty:before
         color: $colorLight
   &__select
-    margin-top: auto
+    // margin-top: auto
 
   &__label
     margin-right: 7px
@@ -95,6 +100,12 @@
       margin-top: auto
       p
         margin: -2px 10px 0 0
+        white-space: nowrap
+      .chosen-single
+        span
+          text-overflow: ellipsis
+          max-width: 110px
+          width: 100%
     .chosen-single
       background: transparent
       border-color: transparent
@@ -102,11 +113,12 @@
         font-size: 16px
         font-weight: 700
         line-height: normal
-        margin: 0
+        margin: 0 25px 0 0
         height: auto
         color: $fontColor
       div
-        display: none
+        height: 20px
+        // display: none
   .chosen-search
     display: none
   .chosen-drop
@@ -164,9 +176,12 @@
     margin-top: 6px
     font-size: 14px
     color: $colorLight
+    transition: all .25s $ease
     .ico
       margin-right: 8px
       font-size: 16px
+    &:hover
+      color: $colorPrimary
 
   &__passport-edit
     margin-top: 6px
@@ -175,14 +190,20 @@
     color: $fontColor
     display: flex
     align-items: center
-    a
+    transition: all .25s $ease
+    &-icon
       margin-left: auto
       display: block
       line-height: 0
+      transition: all .25s $ease
     .ico
       color: $colorLight
       font-size: 16px
       height: 16px
+    &:hover
+      color: $colorPrimary
+      .ico
+        color: $colorPrimary
 
   &__btn-move
     position: absolute
@@ -230,11 +251,11 @@
     padding: 0
     &--access
       h3
-        padding: 15px 20px
+        padding: 17px 20px
         // min-height: 68px
         margin-bottom: 0
     &--editable
-      padding: 21px 20px
+      padding: 17px 20px
       min-height: 100px
       .tile__heading
         margin-bottom: 0
@@ -281,11 +302,11 @@
         margin-top: auto
         border-top: 1px solid $borderColor
     &__input
-      input
-        padding: 17px 20px
+      padding: 17px 20px
     &__btn-delete
-      top: 5px
-      right: 9px
+      top: 16px
+      right: auto
+      left: -2px
     &__number
       display: none
     &__passport-add
