--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -25,6 +25,7 @@ body, html
   margin: 0
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
+  overflow: hidden
 
 ::selection
   color: white
@@ -142,6 +143,7 @@ body, html
     margin-bottom: 25px
     padding-left: 13px
     padding-right: 13px
+    // position: relative
 
 
 .content-comments
