--- a/src/components/slidePanel/_slde-panel.sass
+++ b/src/components/slidePanel/_slde-panel.sass
@@ -1,21 +1,18 @@
-.passport-hidden
+.slide-panel
   position: absolute
   width: 100%
   height: 100%
   z-index: 2000
   top: 0
   right: 0
-  opacity: 1
+  opacity: 0
   pointer-events: none
   background: rgba($colorLight, 0.9)
-  transition: .25s $ease
+  transition: opacity .25s $ease
   display: flex
-  transform: translateX(100%)
+  // transform: translateX(100%)
   // left: 100%
 
-  &.is-open
-    transform: translateX(0)
-    pointer-events: all
   &__content
     max-width: 500px
     background: #fff
@@ -25,6 +22,9 @@
     height: 100%
     position: relative
     z-index: 2
+    transform: translate3d(100%,0,0)
+    transition: transform .25s $ease
+
   &__close
     font-size: 20px
     color: $fontColor
@@ -81,3 +81,10 @@
     background: $borderColor
   .tile__passport-add
     margin-top: 20px
+
+  &.is-open
+    opacity: 1
+    // transform: translateX(0%)
+    pointer-events: all
+    .slide-panel__content
+      transform: translate3d(0,0,0)
