--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -286,6 +286,14 @@ input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-i
 input[type="number"]
   -moz-appearance: textfield;
 
-[contenteditable=true]:empty:before
-  content: attr(placeholder)
-  display: block
+[contenteditable]
+  cursor: text
+  /// :empty:not(:focus):before
+  &:empty:before
+    content: attr(placeholder)
+    display: block
+    color: $colorLight
+
+[placeholder]:empty:focus::before
+  content: ""
+
