--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -103,6 +103,13 @@ textarea.ui-input
           border-color: $colorPrimary
         &::after
           transform: translateY(-50%) scale(1)
+    &.has-error
+      + label
+        &::before
+          border-color: #F8D7CF
+          background-color: #F8D7CF
+        &::after
+
   label
     display: block
     width: 100%
