--- a/src/components/projectQuestions/_project-questions.sass
+++ b/src/components/projectQuestions/_project-questions.sass
@@ -7,6 +7,8 @@
     flex: 1 0 300px
     border-right: 1px solid $borderColor
     padding: 40px 15px 40px 0
+    &-add
+      display: none
     &-close
       display: none
     &-title
@@ -146,6 +148,49 @@
           flex: 1
         .ui-group__content
           flex: 0
+    &-tasks
+      padding-left: 0
+      margin-top: -10px
+      position: relative
+      z-index: 10
+      font-size: 12px
+      color: $colorLight
+      display: flex
+      width: auto
+      // &:before
+      //   position: absolute
+      //   width: 100%
+      //   display: block
+      //   height: 18px
+      //   content: ''
+      //   outline: 1px solid red
+      //   bottom: 0
+      &:hover
+        .project-questions__sidebar-tasks-links
+          opacity: 1
+          pointer-events: all
+      &-links
+        width: 250px
+        bottom: 18px
+        position: absolute
+        width: 100%
+        border-radius: 4px
+        background: $colorBg
+        box-shadow: 0 0 5px rgba(#0B1C2D, 0.15)
+        opacity: 0
+        pointer-events: none
+        transition: all 0.25s ease-in-out
+      &-link
+        padding: 14px !important
+        font-size: 12px
+        color: $fontColor
+        border-bottom: 1px solid $borderColor
+        &:before
+          display: none !important
+        &:after
+          display: none !important
+        &:last-child
+          border-bottom: none
   &__content
     padding: 40px 0 30px
     width: 100%
@@ -247,10 +292,28 @@
       margin-left: -10px
       padding-right: 0
       transition: all 0.25s ease-in-out
+      &-tasks
+        display: none
       &-toggle
         margin-left: 0
         padding-top: 40px
         padding-right: 20px
+        display: none
+      &--form
+        .project-questions__sidebar-item
+          a
+            position: relative
+      &-add
+        display: inline-block
+        position: absolute
+        left: 9px
+        // top: 14px
+        top: 50%
+        transform: translateY(-50%)
+        color: $colorPrimary
+        line-height: 0
+        .ico
+          font-size: 16px
       &.is-hide
         margin-left: -265px
       &-head
@@ -284,6 +347,9 @@
             margin-left: -2px
       &-title
         padding: 12px 10px 12px 10px
+        position: relative
+        .project-questions__sidebar-add
+          left: -11px
       &-item
         border-top: 1px solid $borderColor
         padding-left: 0
