--- a/src/pug/form-questions.pug
+++ b/src/pug/form-questions.pug
@@ -15,7 +15,7 @@ block content
       .main-content.js-main-content-scroller
         ._container.container
           .project-questions
-            .__sidebar
+            .__sidebar.project-questions__sidebar--form
               .__sidebar-toggle
                 .__sidebar-input
                   .ui-group.-inline
@@ -32,32 +32,65 @@ block content
                       label.ui-toggle._ui-toggle
                         input._input(type='checkbox' name='test_2')#test_2
                         span._handle
-              p.__sidebar-title Разработка интернет-магазина
+              //- p.__sidebar-title Разработка интернет-магазина
+              .__sidebar-head
+                p.__sidebar-title Разработка интернет-магазина
+                  span.project-questions__sidebar-add
+                    +svgMono("plus")
+                a.__sidebar-close.js-sidebar-hide(href="#")
+                  span
               .__sidebar-item.main
                 a.js-open-parent(href="#") Нужен ли вам маркетинг?
+                  span.project-questions__sidebar-add
+                    +svgMono("plus")
+                .__sidebar-tasks
+                  | 3 задачи
+                  .__sidebar-tasks-links
+                    a.__sidebar-tasks-link(href="#") Подготовить коммерческое предложение для подключения платежного шлюза 1
+                    a.__sidebar-tasks-link(href="#") Подготовить коммерческое предложение для подключения платежного шлюза 2
                 .__sidebar-item
                   a.js-open-parent(href="#") Укажите общий бюджет на маркетинг
+                    span.project-questions__sidebar-add
+                      +svgMono("plus")
                   .__sidebar-item
                     a.js-open-parent(href="#") Требуется ли вам offline-маркетинг?
+                      span.project-questions__sidebar-add
+                        +svgMono("plus")
                     .__sidebar-item.last
                       a.js-open-parent(href="#") Нужны ли вам работы над сайтом?
+                        span.project-questions__sidebar-add
+                          +svgMono("plus")
                   .__sidebar-item
                     a.js-open-parent(href="#") Требуется ли вам интернет-маркетинг?
+                      span.project-questions__sidebar-add
+                        +svgMono("plus")
                     .__sidebar-item.last
                       a.js-open-parent(href="#") Нужны ли вам работы над сайтом?
+                        span.project-questions__sidebar-add
+                          +svgMono("plus")
                     .__sidebar-item.last.error
                       a.js-open-parent(href="#") Нужна ли работа с целевой аудиторией и мониторинг работы компании?
+                        span.project-questions__sidebar-add
+                          +svgMono("plus")
                         //- span.error(data-att="Добавьте ответ к этой связи")
-                        span.error
-                        span.hint Добавьте ответ к этой связи
+                        span.error.js-tooltip(data-tippy-placement="top" data-tippy-content="Добавьте ответ к этой связи" title='' href="#")
+                        //- span.hint Добавьте ответ к этой связи
                   .__sidebar-item.last
                     a.js-open-parent(href="#") Требуется ли вам комплексный маркетинг?
+                      span.project-questions__sidebar-add
+                        +svgMono("plus")
                 .__sidebar-item
                   a.js-open-parent(href="#") Укажите желаемое время реализации
+                    span.project-questions__sidebar-add
+                      +svgMono("plus")
               .__sidebar-item.main
                 a.js-open-parent(href="#") Нужны ли вам услуги дизайна?
+                  span.project-questions__sidebar-add
+                    +svgMono("plus")
               .__sidebar-item.main
                 a.js-open-parent(href="#") Нужны ли вам услуги программирования?
+                  span.project-questions__sidebar-add
+                    +svgMono("plus")
             .form-questions__content
               .form-questions__head
                 .form-questions__head-left
