--- a/src/components/formQuestions/_form-questions.sass
+++ b/src/components/formQuestions/_form-questions.sass
@@ -194,6 +194,10 @@
 
 +r($lg)
   .form-questions
+    &__items
+      margin: 0 -30px
+    &__item
+      border-radius: 0
     &__role
       border: 1px solid $borderColor
       border-radius: 4px
