--- a/src/components/mainFooter/_main-footer.sass
+++ b/src/components/mainFooter/_main-footer.sass
@@ -28,3 +28,15 @@
 
   &.is-scrolled
     padding: 15px 0
+
++r($lg)
+  .main-footer
+    &__return
+      padding: 12px 20px
+      border-radius: 4px
+      border: 1px solid #DDE5ED
+      line-height: 1
+      span
+        margin-left: 0
+      .ico
+        display: none
