--- a/src/pug/form-questions.pug
+++ b/src/pug/form-questions.pug
@@ -22,7 +22,7 @@ block content
                     label(for="test_1") Показывать варианты ответов
                     ._content
                       label.ui-toggle._ui-toggle
-                        input._input(type='checkbox' name='test_1')#test_1
+                        input._input.js-show-answers(type='checkbox' name='test_1')#test_1
                         span._handle
 
                 .__sidebar-input
@@ -30,67 +30,134 @@ block content
                     label(for="test_2") Показывать созданные задачи
                     ._content
                       label.ui-toggle._ui-toggle
-                        input._input(type='checkbox' name='test_2')#test_2
+                        input._input.js-show-tasks(type='checkbox' name='test_2')#test_2
                         span._handle
               //- p.__sidebar-title Разработка интернет-магазина
               .__sidebar-head
                 p.__sidebar-title Разработка интернет-магазина
-                  span.project-questions__sidebar-add
-                    +svgMono("plus")
+                  //- span.project-questions__sidebar-add
+                  //-   +svgMono("plus")
                 a.__sidebar-close.js-sidebar-hide(href="#")
                   span
               .__sidebar-item.main
                 a.js-open-parent(href="#") Нужен ли вам маркетинг?
-                  span.project-questions__sidebar-add
-                    +svgMono("plus")
                 .__sidebar-tasks
-                  | 3 задачи
+                  a.js-open-tasks(href="#") 3 задачи
                   .__sidebar-tasks-links
-                    a.__sidebar-tasks-link(href="#") Подготовить коммерческое предложение для подключения платежного шлюза 1
-                    a.__sidebar-tasks-link(href="#") Подготовить коммерческое предложение для подключения платежного шлюза 2
-                .__sidebar-item
-                  a.js-open-parent(href="#") Укажите общий бюджет на маркетинг
-                    span.project-questions__sidebar-add
-                      +svgMono("plus")
+                    a.__sidebar-tasks-link(href="#") TASK 1 Нужны ли вам работы над сайтом?
+                    a.__sidebar-tasks-link(href="#") TASK 2 Нужны ли вам работы над сайтом?
+                    a.__sidebar-tasks-link(href="#") TASK 3 Нужна ли работа с целевой аудиторией и мониторинг работы компании?
+                  //- span.project-questions__sidebar-add
+                  //-   +svgMono("plus")
+                .__sidebar-item-block
+                  .__sidebar-item.last.answer
+                    a(href="#") Не нужен
+                      //- span.project-questions__sidebar-add
+                      //-   +svgMono("plus")
+                  .__sidebar-item.answer
+                    a.js-open-parent(href="#") Нужен
+                      //- span.project-questions__sidebar-add
+                      //-   +svgMono("plus")
+                    .__sidebar-item-block
+                      .__sidebar-item.answer
+                        a.js-open-parent(href="#") 10 000 руб.
+                          //- span.project-questions__sidebar-add
+                          //-   +svgMono("plus")
+                        .__sidebar-item-block
+                          .__sidebar-item.last.task
+                            a(href="#") TASK 10 Нужны ли вам работы над сайтом?
+                              //- span.project-questions__sidebar-add
+                              //-   +svgMono("plus")
+                      .__sidebar-item.answer
+                        a.js-open-parent(href="#") 100 000 руб.
+                          //- span.project-questions__sidebar-add
+                          //-   +svgMono("plus")
+                        .__sidebar-item-block
+                          .__sidebar-item.last.task
+                            a(href="#") TASK 20 Нужны ли вам работы над сайтом?
+                              //- span.project-questions__sidebar-add
+                              //-   +svgMono("plus")
+                          .__sidebar-item.last.task
+                            a(href="#") TASK 21 Нужны ли вам работы над сайтом?
+                              //- span.project-questions__sidebar-add
+                              //-   +svgMono("plus")
+                      .__sidebar-item.answer
+                        a.js-open-parent(href="#") 1 000 000 руб.
+                          //- span.project-questions__sidebar-add
+                          //-   +svgMono("plus")
+                        .__sidebar-item-block
+                          .__sidebar-item.last.task
+                            a(href="#") TASK 30 Нужны ли вам работы над сайтом?
+                              //- span.project-questions__sidebar-add
+                              //-   +svgMono("plus")
+                          .__sidebar-item.last.task
+                            a(href="#") TASK 31 Нужны ли вам работы над сайтом?
+                              //- span.project-questions__sidebar-add
+                              //-   +svgMono("plus")
+                          .__sidebar-item.last.task
+                            a(href="#") TASK 32 Нужны ли вам работы над сайтом?
+                              //- span.project-questions__sidebar-add
+                              //-   +svgMono("plus")
                   .__sidebar-item
-                    a.js-open-parent(href="#") Требуется ли вам offline-маркетинг?
-                      span.project-questions__sidebar-add
-                        +svgMono("plus")
-                    .__sidebar-item.last
-                      a.js-open-parent(href="#") Нужны ли вам работы над сайтом?
-                        span.project-questions__sidebar-add
-                          +svgMono("plus")
-                  .__sidebar-item
-                    a.js-open-parent(href="#") Требуется ли вам интернет-маркетинг?
-                      span.project-questions__sidebar-add
-                        +svgMono("plus")
-                    .__sidebar-item.last
-                      a.js-open-parent(href="#") Нужны ли вам работы над сайтом?
-                        span.project-questions__sidebar-add
-                          +svgMono("plus")
-                    .__sidebar-item.last.error
-                      a.js-open-parent(href="#") Нужна ли работа с целевой аудиторией и мониторинг работы компании?
-                        span.project-questions__sidebar-add
-                          +svgMono("plus")
-                        //- span.error(data-att="Добавьте ответ к этой связи")
-                        span.error.js-tooltip(data-tippy-placement="top" data-tippy-content="Добавьте ответ к этой связи" title='' href="#")
-                        //- span.hint Добавьте ответ к этой связи
+                    a.js-open-parent(href="#") Укажите общий бюджет на маркетинг
+                      //- span.project-questions__sidebar-add
+                      //-   +svgMono("plus")
+                    .__sidebar-item-block
+                      .__sidebar-item
+                        a.js-open-parent(href="#") Требуется ли вам offline-маркетинг?
+                          //- span.project-questions__sidebar-add
+                          //-   +svgMono("plus")
+                        .__sidebar-item-block
+                          .__sidebar-item.last.task
+                            a(href="#") TASK 1 Нужны ли вам работы над сайтом?
+                              //- span.project-questions__sidebar-add
+                              //-   +svgMono("plus")
+                      .__sidebar-item
+                        a.js-open-parent(href="#") Требуется ли вам интернет-маркетинг?
+                          //- span.project-questions__sidebar-add
+                          //-   +svgMono("plus")
+                        .__sidebar-item-block
+                          .__sidebar-item.last.task
+                            a(href="#") TASK 2 Нужны ли вам работы над сайтом?
+                              //- span.project-questions__sidebar-add
+                              //-   +svgMono("plus")
+                          .__sidebar-item.last.error.task
+                            a(href="#") TASK 3 Нужна ли работа с целевой аудиторией и мониторинг работы компании?
+                              //- span.project-questions__sidebar-add
+                              //-   +svgMono("plus")
+                              //- span.error(data-att="Добавьте ответ к этой связи")
+                              span.error.js-tooltip(data-tippy-placement="top" data-tippy-content="Добавьте ответ к этой связи" title='' href="#")
+                              //- span.hint Добавьте ответ к этой связи
+                      .__sidebar-item.last
+                        a.js-open-parent(href="#") Требуется ли вам комплексный маркетинг?
+                          //- span.project-questions__sidebar-add
+                          //-   +svgMono("plus")
                   .__sidebar-item.last
-                    a.js-open-parent(href="#") Требуется ли вам комплексный маркетинг?
-                      span.project-questions__sidebar-add
-                        +svgMono("plus")
-                .__sidebar-item
-                  a.js-open-parent(href="#") Укажите желаемое время реализации
-                    span.project-questions__sidebar-add
-                      +svgMono("plus")
-              .__sidebar-item.main
-                a.js-open-parent(href="#") Нужны ли вам услуги дизайна?
-                  span.project-questions__sidebar-add
-                    +svgMono("plus")
+                    a(href="#") Укажите желаемое время реализации
+                      //- span.project-questions__sidebar-add
+                      //-   +svgMono("plus")
+              .__sidebar-item.main.last
+                a(href="#") Нужны ли вам услуги дизайна?
+                  //- span.project-questions__sidebar-add
+                  //-   +svgMono("plus")
               .__sidebar-item.main
                 a.js-open-parent(href="#") Нужны ли вам услуги программирования?
-                  span.project-questions__sidebar-add
-                    +svgMono("plus")
+                  //- span.project-questions__sidebar-add
+                  //-   +svgMono("plus")
+                .__sidebar-tasks
+                  a.js-open-tasks(href="#") 2 задачи
+                  .__sidebar-tasks-links
+                    a.__sidebar-tasks-link(href="#") Задача №1
+                    a.__sidebar-tasks-link(href="#") Задача №2
+                .__sidebar-item-block
+                  .__sidebar-item.last.task
+                    a(href="#") Задача №1
+                      //- span.project-questions__sidebar-add
+                      //-   +svgMono("plus")
+                  .__sidebar-item.last.task
+                    a(href="#") Задача №2
+                      //- span.project-questions__sidebar-add
+                      //-   +svgMono("plus")
             .form-questions__content
               .form-questions__head
                 .form-questions__head-left
@@ -120,7 +187,7 @@ block content
 
                 .form-questions__role-item
                   .ui-group.-inline
-                    p Несколько ответов:
+                    p Показывать комментарий:
                     ._content
                       label.ui-toggle._ui-toggle
                         input._input(type='checkbox' name='test_12')
