--- a/src/pug/project-questions.pug
+++ b/src/pug/project-questions.pug
@@ -22,27 +22,51 @@ block content
                 a.__sidebar-close.js-sidebar-hide(href="#")
                   span
               .__sidebar-item.main
-                a.js-open-parent(href="#") Нужен ли вам маркетинг?
-                .__sidebar-item
-                  a.js-open-parent(href="#") Укажите общий бюджет на маркетинг
+                a.js-open-parent(href="#") 1 Нужен ли вам маркетинг?
+                .__sidebar-item-block
                   .__sidebar-item
-                    a.js-open-parent(href="#") Требуется ли вам offline-маркетинг?
-                    .__sidebar-item.last
-                      a.js-open-parent(href="#") Нужны ли вам работы над сайтом?
-                  .__sidebar-item
-                    a.js-open-parent(href="#") Требуется ли вам интернет-маркетинг?
-                    .__sidebar-item.last
-                      a.js-open-parent(href="#") Нужны ли вам работы над сайтом?
-                    .__sidebar-item.last
-                      a.js-open-parent(href="#") Нужна ли работа с целевой аудиторией и мониторинг работы компании?
+                    a.js-open-parent(href="#") 2 1Укажите общий бюджет на маркетинг
+                    .__sidebar-item-block
+                      .__sidebar-item
+                        a.js-open-parent(href="#") 3 Требуется ли вам offline-маркетинг?
+                        .__sidebar-item-block
+                          .__sidebar-item.last
+                            a(href="#") 4 Нужны ли вам работы над сайтом?
+                      .__sidebar-item
+                        a.js-open-parent(href="#") 3 Требуется ли вам интернет-маркетинг?
+                        .__sidebar-item-block
+                          .__sidebar-item.last
+                            a(href="#") 4 Нужны ли вам работы над сайтом?
+                          .__sidebar-item.last
+                            a(href="#") 4 Нужна ли работа с целевой аудиторией и мониторинг работы компании?
+                      .__sidebar-item.last
+                        a.js-open-parent(href="#") 3 Требуется ли вам комплексный маркетинг?
                   .__sidebar-item.last
-                    a.js-open-parent(href="#") Требуется ли вам комплексный маркетинг?
-                .__sidebar-item
-                  a.js-open-parent(href="#") Укажите желаемое время реализации
+                    a(href="#") 2 2Укажите желаемое время реализации
               .__sidebar-item.main
-                a.js-open-parent(href="#") Нужны ли вам услуги дизайна?
-              .__sidebar-item.main
-                a.js-open-parent(href="#") Нужны ли вам услуги программирования?
+                a.js-open-parent(href="#") 11 Нужны ли вам услуги дизайна?
+                .__sidebar-item-block
+                  .__sidebar-item
+                    a.js-open-parent(href="#") 22 Укажите общий бюджет на маркетинг
+                    .__sidebar-item-block
+                      .__sidebar-item
+                        a.js-open-parent(href="#") 33 Требуется ли вам offline-маркетинг?
+                        .__sidebar-item-block
+                          .__sidebar-item.last
+                            a(href="#") 44 Нужны ли вам работы над сайтом?
+                      .__sidebar-item
+                        a.js-open-parent(href="#") 33 Требуется ли вам интернет-маркетинг?
+                        .__sidebar-item-block
+                          .__sidebar-item.last
+                            a(href="#") 44 Нужны ли вам работы над сайтом?
+                          .__sidebar-item.last
+                            a(href="#") 44 Нужна ли работа с целевой аудиторией и мониторинг работы компании?
+                      .__sidebar-item.last
+                        a.js-open-parent(href="#") 33 Требуется ли вам комплексный маркетинг?
+                  .__sidebar-item
+                    a.js-open-parent(href="#") 22 Укажите желаемое время реализации
+              .__sidebar-item.main.last
+                a(href="#") 111 Нужны ли вам услуги программирования?
             .__content
               .__progress
                 .__point(style="padding-left: 24%")
