--- a/src/components/projectQuestions/_project-questions.sass
+++ b/src/components/projectQuestions/_project-questions.sass
@@ -96,6 +96,7 @@
       &.main
         // display: block
         margin-left: -20px
+        transition: all 0.25s ease-in-out
       &.error
         a
           color: #EB5757
@@ -362,7 +363,10 @@
         .ico
           font-size: 16px
       &.is-hide
-        margin-left: -265px
+        margin-left: -305px
+        .project-questions__sidebar-item
+          transform: translate(-100%)
+          opacity: 0
       &-head
         display: flex
         align-items: center
